--- a/sscquiz/firstquiz/1st.html
+++ b/sscquiz/firstquiz/1st.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>SSC QUIZ</title>
-<script src="1st.js" type="text/javascript"></script>
-<link rel="stylesheet" type="text/css" href="/sscias.github.io/CSS/quiz_css.css">
+<script src="https://sscias.github.io/sscquiz/firstquiz/1st.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="https://sscias.github.io/CSS/quiz_css.css">
 
 </head>
 	<body>
